--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality. 
-    -->
     <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> -->
-    <!-- android:roundIcon="@mipmap/ic_launcher_round" -->
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -38,8 +32,11 @@
         <activity
             android:name=".UI.RouteBuildActivity"
             android:label="@string/title_activity_route_build" />
-        <activity android:name=".UI.RouteCreateActivity" />
-        <activity android:name=".UI.PlayerActivity"></activity>
+        <activity
+            android:name=".UI.RouteCreateActivity" />
+        <activity
+            android:name=".UI.PlayerActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
